--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -1,2 +1,3 @@
 booking.property=Product Profile Dev
-spring.datasource.url=jdbc:postgresql://localhost:5432/productdb
+spring.datasource.url=jdbc:postg resql://localhost:5432/productdb
+app.testProp=Property of test
