--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -1,3 +1,6 @@
 booking.property=Product Profile Dev
 spring.datasource.url=jdbc:postg resql://localhost:5432/productdb
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
 app.testProp=Property of test
