--- a/booking-microservice-dev.properties
+++ b/booking-microservice-dev.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/bookingdb
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+management.endpoint.restart.enabled=true
